--- a/sort_bubble_sort/Makefile
+++ b/sort_bubble_sort/Makefile
@@ -1,11 +1,16 @@
-CFLAGS=-std=c11 -g -static
+main_c: main.c
+	gcc -std=c11 -g -static main.c -o main_c
 
-main: main.c
+test_c: main_c
+	./test_c.sh
 
-test: main
-	./test.sh
+main_cpp: main.cpp
+	g++ -std=c++11 -g -static main.cpp -o main_cpp
 
-clean: main
-	rm -rf main
+test_cpp: main_cpp
+	./test_cpp.sh
 
-.PHONY: test clean
+clean:
+	rm -rf main_cpp main_c
+
+.PHONY: test_cpp test_c clean
