added advanced_dp/lis in c++

--- a/advanced_dp/lis/Makefile
+++ b/advanced_dp/lis/Makefile
@@ -4,19 +4,22 @@ main_c: main.c
 test_c: main_c
 	./test_c.sh
 
-main_cpp: main.cpp
-	g++ -std=c++11 -g -static main.cpp -o main_cpp
+main_simple_cpp: main_simple.cpp
+	g++ -std=c++11 -g -static main_simple.cpp -o main_simple_cpp
 
-test_cpp: main_cpp
-	./test_cpp.sh
+test_simple_cpp: main_simple_cpp
+	./test_simple_cpp.sh
 
-test_cpp2: main_cpp
-	./test_cpp2.sh
+main_binsearch_cpp: main_binsearch.cpp
+	g++ -std=c++11 -g -static main_binsearch.cpp -o main_binsearch_cpp
+
+test_binsearch_cpp: main_binsearch_cpp
+	./test_binsearch_cpp.sh
 
 test_py:
 	./test_py.sh
 
 clean:
-	rm -rf main_cpp main_c
+	rm -rf main_simple_cpp main_binsearch_cpp main_c
 
 .PHONY: test_cpp test_c clean
